// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Protocol Schemas > Generates a complete Astro project with normalized protocol metadata > # Of Files Generated 1`] = `18`;

exports[`Protocol Schemas > Generates a complete Astro project with normalized protocol metadata > protocol-astro/package.json 1`] = `
"{
  "name": "minecraft-protocol-docs",
  "private": true,
  "type": "module",
  "scripts": {
    "dev": "astro dev",
    "build": "astro build",
    "check": "astro check",
    "preview": "astro preview"
  },
  "dependencies": {
    "astro": "^7.2.1"
  },
  "devDependencies": {
    "@astrojs/check": "^0.9.4",
    "typescript": "^5.9.0"
  }
}"
`;

exports[`Protocol Schemas > Generates a complete Astro project with normalized protocol metadata > protocol-astro/src/data/protocol.json 1`] = `
"{
  "minecraftVersion": "1.26.10",
  "packets": [
    {
      "description": "Sent once from client to server at login.",
      "details": "",
      "fields": [
        {
          "description": "",
          "name": "Client Network Version",
          "ordinal": 0,
          "required": true,
          "serialization": [],
          "type": "uint32",
          "wireSize": "4 bytes",
          "wireSizeBytes": 4
        },
        {
          "description": "See @connectionRequest.html#diagram@ and @connectionRequest.html@.",
          "name": "Connection Request",
          "ordinal": 1,
          "required": true,
          "serialization": [],
          "type": "string",
          "wireSize": "variable",
          "wireSizeBytes": 8
        }
      ],
      "id": 1,
      "slug": "login-packet",
      "title": "LoginPacket"
    },
    {
      "description": "All kinds of actor state changes (see Actor::handleEntityEvent).",
      "details": "",
      "fields": [
        {
          "description": "",
          "name": "Target Runtime ID",
          "ordinal": 0,
          "required": true,
          "serialization": [],
          "target": "actor-runtime-id",
          "type": "ActorRuntimeID",
          "wireSize": "variable",
          "wireSizeBytes": 8
        },
        {
          "description": "",
          "enumValues": [
            "NONE",
            "JUMP",
            "HURT",
            "DEATH",
            "START_ATTACKING",
            "STOP_ATTACKING",
            "TAMING_FAILED",
            "TAMING_SUCCEEDED",
            "SHAKE_WETNESS",
            "EAT_GRASS",
            "FISHHOOK_BUBBLE",
            "FISHHOOK_FISHPOS",
            "FISHHOOK_HOOKTIME",
            "FISHHOOK_TEASE",
            "SQUID_FLEEING",
            "ZOMBIE_CONVERTING",
            "PLAY_AMBIENT",
            "SPAWN_ALIVE",
            "START_OFFER_FLOWER",
            "STOP_OFFER_FLOWER",
            "LOVE_HEARTS",
            "VILLAGER_ANGRY",
            "VILLAGER_HAPPY",
            "WITCH_HAT_MAGIC",
            "FIREWORKS_EXPLODE",
            "IN_LOVE_HEARTS",
            "SILVERFISH_MERGE_ANIM",
            "GUARDIAN_ATTACK_SOUND",
            "DRINK_POTION",
            "THROW_POTION",
            "PRIME_TNTCART",
            "PRIME_CREEPER",
            "AIR_SUPPLY",
            "DEPRECATED_ADD_PLAYER_LEVELS",
            "GUARDIAN_MINING_FATIGUE",
            "AGENT_SWING_ARM",
            "DRAGON_START_DEATH_ANIM",
            "GROUND_DUST",
            "SHAKE",
            "FEED",
            "BABY_AGE",
            "INSTANT_DEATH",
            "NOTIFY_TRADE",
            "LEASH_DESTROYED",
            "CARAVAN_UPDATED",
            "TALISMAN_ACTIVATE",
            "DEPRECATED_UPDATE_STRUCTURE_FEATURE",
            "PLAYER_SPAWNED_MOB",
            "PUKE",
            "UPDATE_STACK_SIZE",
            "START_SWIMMING",
            "BALLOON_POP",
            "TREASURE_HUNT",
            "SUMMON_AGENT",
            "FINISHED_CHARGING_ITEM",
            "ACTOR_GROW_UP",
            "VIBRATION_DETECTED",
            "DRINK_MILK",
            "SHAKE_WETNESS_STOP",
            "KINETIC_DAMAGE_DEALT"
          ],
          "name": "Event ID",
          "ordinal": 1,
          "required": true,
          "serialization": [
            "Enum-as-Value"
          ],
          "target": "actor-event",
          "type": "uint8",
          "wireSize": "1 byte",
          "wireSizeBytes": 1
        },
        {
          "description": "",
          "name": "Data",
          "ordinal": 2,
          "required": true,
          "serialization": [
            "Compression"
          ],
          "type": "varint32",
          "wireSize": "variable (up to 5 bytes)",
          "wireSizeBytes": 5
        }
      ],
      "id": -1,
      "slug": "actor-event-packet",
      "title": "ActorEventPacket"
    },
    {
      "description": "Sent from the server to client when remote firing an NPC dialogue window for a client",
      "details": "",
      "fields": [
        {
          "description": "The ActorUniqueID of the NPC being remote fired",
          "name": "Npc Id Raw Id",
          "ordinal": 0,
          "required": true,
          "serialization": [],
          "type": "uint64",
          "wireSize": "8 bytes",
          "wireSizeBytes": 8
        },
        {
          "description": "",
          "enumValues": [
            "Open",
            "Close"
          ],
          "name": "Npc Dialogue Action Type",
          "ordinal": 1,
          "required": true,
          "serialization": [
            "Compression",
            "Enum-as-Value"
          ],
          "target": "npc-dialogue-action-type",
          "type": "varint32",
          "wireSize": "variable (up to 5 bytes)",
          "wireSizeBytes": 5
        },
        {
          "description": "The text to be displayed to the client",
          "name": "Dialogue",
          "ordinal": 2,
          "required": true,
          "serialization": [],
          "type": "string",
          "wireSize": "variable",
          "wireSizeBytes": 8
        },
        {
          "description": "The scene the data has been pulled from for the client to reference",
          "name": "Scene Name",
          "ordinal": 3,
          "required": true,
          "serialization": [],
          "type": "string",
          "wireSize": "variable",
          "wireSizeBytes": 8
        },
        {
          "description": "The name of the NPC to be displayed to the client",
          "name": "Npc Name",
          "ordinal": 4,
          "required": true,
          "serialization": [],
          "type": "string",
          "wireSize": "variable",
          "wireSizeBytes": 8
        },
        {
          "description": "The JSON string of the buttons/actions the server can perform. The server is still authoritative on what actions can be performed",
          "name": "Action JSON",
          "ordinal": 5,
          "required": true,
          "serialization": [],
          "type": "string",
          "wireSize": "variable",
          "wireSizeBytes": 8
        }
      ],
      "id": -1,
      "slug": "npc-dialogue-packet",
      "title": "NpcDialoguePacket"
    }
  ],
  "primitives": [
    {
      "category": "Signed integer",
      "encoding": "ZigZag-encoded, then written as base-128 groups with the high bit indicating continuation.",
      "size": "1-5 bytes",
      "slug": "varint32",
      "title": "varint32"
    },
    {
      "category": "Unsigned integer",
      "encoding": "Unsigned binary integer.",
      "size": "1 byte",
      "slug": "uint8",
      "title": "uint8"
    },
    {
      "category": "Unsigned integer",
      "encoding": "Unsigned binary integer, little-endian unless the field specifies Big Endian.",
      "size": "4 bytes",
      "slug": "uint32",
      "title": "uint32"
    },
    {
      "category": "Unsigned integer",
      "encoding": "Unsigned binary integer, little-endian unless the field specifies Big Endian.",
      "size": "8 bytes",
      "slug": "uint64",
      "title": "uint64"
    },
    {
      "category": "Unsigned integer",
      "encoding": "Written as base-128 groups with the high bit indicating that another byte follows.",
      "size": "1-10 bytes",
      "slug": "varuint64",
      "title": "varuint64"
    },
    {
      "category": "Text",
      "encoding": "UTF-8 bytes prefixed by their byte length as a varuint32.",
      "size": "Variable",
      "slug": "string",
      "title": "string"
    }
  ],
  "protocolVersion": "944",
  "types": [
    {
      "category": "enum",
      "description": "",
      "enumValues": [
        "NONE",
        "JUMP",
        "HURT",
        "DEATH",
        "START_ATTACKING",
        "STOP_ATTACKING",
        "TAMING_FAILED",
        "TAMING_SUCCEEDED",
        "SHAKE_WETNESS",
        "EAT_GRASS",
        "FISHHOOK_BUBBLE",
        "FISHHOOK_FISHPOS",
        "FISHHOOK_HOOKTIME",
        "FISHHOOK_TEASE",
        "SQUID_FLEEING",
        "ZOMBIE_CONVERTING",
        "PLAY_AMBIENT",
        "SPAWN_ALIVE",
        "START_OFFER_FLOWER",
        "STOP_OFFER_FLOWER",
        "LOVE_HEARTS",
        "VILLAGER_ANGRY",
        "VILLAGER_HAPPY",
        "WITCH_HAT_MAGIC",
        "FIREWORKS_EXPLODE",
        "IN_LOVE_HEARTS",
        "SILVERFISH_MERGE_ANIM",
        "GUARDIAN_ATTACK_SOUND",
        "DRINK_POTION",
        "THROW_POTION",
        "PRIME_TNTCART",
        "PRIME_CREEPER",
        "AIR_SUPPLY",
        "DEPRECATED_ADD_PLAYER_LEVELS",
        "GUARDIAN_MINING_FATIGUE",
        "AGENT_SWING_ARM",
        "DRAGON_START_DEATH_ANIM",
        "GROUND_DUST",
        "SHAKE",
        "FEED",
        "BABY_AGE",
        "INSTANT_DEATH",
        "NOTIFY_TRADE",
        "LEASH_DESTROYED",
        "CARAVAN_UPDATED",
        "TALISMAN_ACTIVATE",
        "DEPRECATED_UPDATE_STRUCTURE_FEATURE",
        "PLAYER_SPAWNED_MOB",
        "PUKE",
        "UPDATE_STACK_SIZE",
        "START_SWIMMING",
        "BALLOON_POP",
        "TREASURE_HUNT",
        "SUMMON_AGENT",
        "FINISHED_CHARGING_ITEM",
        "ACTOR_GROW_UP",
        "VIBRATION_DETECTED",
        "DRINK_MILK",
        "SHAKE_WETNESS_STOP",
        "KINETIC_DAMAGE_DEALT"
      ],
      "fields": [],
      "serialization": [],
      "slug": "actor-event",
      "title": "enum ActorEvent",
      "uses": [
        {
          "packetSlug": "actor-event-packet",
          "packetTitle": "ActorEventPacket",
          "path": [
            "Event ID",
            "enum ActorEvent"
          ]
        }
      ],
      "wireFormats": [
        {
          "serialization": [
            "Enum-as-Value"
          ],
          "type": "uint8"
        }
      ]
    },
    {
      "category": "enum",
      "description": "",
      "enumValues": [
        "Open",
        "Close"
      ],
      "fields": [],
      "serialization": [
        "Compression",
        "Enum-as-Value"
      ],
      "slug": "npc-dialogue-action-type",
      "title": "NpcDialogueActionType",
      "uses": [
        {
          "packetSlug": "npc-dialogue-packet",
          "packetTitle": "NpcDialoguePacket",
          "path": [
            "Npc Dialogue Action Type",
            "NpcDialogueActionType"
          ]
        }
      ],
      "wireFormats": [
        {
          "serialization": [
            "Compression",
            "Enum-as-Value"
          ],
          "type": "varint32"
        }
      ]
    },
    {
      "category": "enum",
      "description": "",
      "enumValues": [
        "First",
        "Second"
      ],
      "fields": [],
      "serialization": [],
      "slug": "protocol-mode",
      "title": "ProtocolMode",
      "uses": [],
      "wireFormats": []
    },
    {
      "category": "object",
      "description": "",
      "enumValues": [],
      "fields": [
        {
          "description": "",
          "name": "Actor Runtime ID",
          "ordinal": 0,
          "required": true,
          "serialization": [
            "Compression"
          ],
          "type": "varuint64",
          "wireSize": "variable (up to 10 bytes)",
          "wireSizeBytes": 10
        }
      ],
      "serialization": [],
      "slug": "actor-runtime-id",
      "title": "ActorRuntimeID",
      "uses": [
        {
          "packetSlug": "actor-event-packet",
          "packetTitle": "ActorEventPacket",
          "path": [
            "Target Runtime ID",
            "ActorRuntimeID"
          ]
        }
      ],
      "wireFormats": []
    },
    {
      "category": "object",
      "description": "",
      "enumValues": [],
      "fields": [
        {
          "description": "",
          "name": "Value",
          "ordinal": 0,
          "required": false,
          "serialization": [],
          "type": "integer",
          "wireSize": "variable",
          "wireSizeBytes": 8
        }
      ],
      "serialization": [],
      "slug": "protocol-object",
      "title": "ProtocolObject",
      "uses": [],
      "wireFormats": []
    }
  ]
}
"
`;

exports[`Protocol Schemas > Properly generates HTML pages and index for game protocol packets > # Of Files Generated 1`] = `6`;

exports[`Protocol Schemas > Properly generates HTML pages and index for game protocol packets > protocol/ActorEventPacket.html 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>ActorEventPacket</title>
    <style>
        body {
            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
            margin: 0;
            padding: 20px;
            background-color: #f5f5f5;
            line-height: 1.6;
        }
        .container {
            max-width: 1200px;
            margin: 0 auto;
            background-color: white;
            padding: 30px;
            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
        }
        h1 {
            color: #2c3e50;
            border-bottom: 3px solid #3498db;
            padding-bottom: 10px;
            margin-top: 0;
        }
        h2 {
            color: #34495e;
            border-bottom: 2px solid #3498db;
            padding-bottom: 5px;
            margin-top: 30px;
        }
        h3 {
            color: #555;
            margin-top: 20px;
            margin-bottom: 10px;
        }
        h4 {
            color: #666;
            margin-top: 15px;
            margin-bottom: 8px;
        }
        table {
            background-color: white;
            font-size: 14px;
            margin-bottom: 10px;
        }
        th {
            font-weight: bold;
            text-align: left;
            padding: 8px !important;
        }
        td {
            padding: 8px !important;
        }
        tr:nth-child(even) {
            background-color: #f9f9f9;
        }
        tr:hover {
            background-color: #e8f4f8;
        }
        .description {
            color: #555;
            font-style: italic;
            margin: 10px 0 20px 0;
            padding: 10px;
            background-color: #f8f9fa;
            border-left: 4px solid #3498db;
        }
        a {
            color: #3498db;
            text-decoration: none;
        }
        a:hover {
            text-decoration: underline;
        }
        .packet-list {
            columns: 3;
            column-gap: 20px;
        }
        .packet-list li {
            margin-bottom: 8px;
            break-inside: avoid;
            overflow-wrap: anywhere;
        }
        .packet-list a {
            overflow-wrap: anywhere;
        }
        details {
            margin: 10px 0;
        }
        summary {
            cursor: pointer;
            font-weight: bold;
            padding: 8px;
            background-color: #f0f0f0;
            border: 1px solid #ddd;
            border-radius: 4px;
            user-select: none;
        }
        summary:hover {
            background-color: #e8e8e8;
        }
        details[open] summary {
            background-color: #d4edff;
            border-color: #3498db;
            border-left: 4px solid #3498db;
        }
        @media (max-width: 900px) {
            .packet-list {
                columns: 2;
            }
        }
        @media (max-width: 600px) {
            .packet-list {
                columns: 1;
            }
        }
    </style>
</head>
<body>
    <div class="container">
        <p><a href="index.html">← Back to Index</a></p>
        <h1>ActorEventPacket</h1>
<div class="description">All kinds of actor state changes (see Actor::handleEntityEvent).</div>
<div style="margin-left: 0px; margin-top: 10px;">
<table border="1" cellpadding="5" cellspacing="0" style="border-collapse: collapse; width: 100%; max-width: 800px;">
        <thead>
            <tr style="background-color: #f0f0f0;">
                <th>Field Name</th>
                <th>Type</th>
                <th>Field Index</th>
                <th>Description</th>
            </tr>
        </thead>
        <tbody>
<tr>
<td rowspan="2"><strong>Target Runtime ID (Required)</strong></td>
<td>ActorRuntimeID</td>
                <td>0</td>
                <td></td>
            </tr>
<tr>
                    <td colspan="3"><div style="margin-left: 20px; margin-top: 10px;">
<h3>ActorRuntimeID</h3>
<table border="1" cellpadding="5" cellspacing="0" style="border-collapse: collapse; width: 100%; max-width: 800px;">
        <thead>
            <tr style="background-color: #f0f0f0;">
                <th>Field Name</th>
                <th>Type</th>
                <th>Field Index</th>
                <th>Description</th>
            </tr>
        </thead>
        <tbody>
<tr>
<td><strong>Actor Runtime ID (Required)</strong></td>
<td>varuint64</td>
                <td>0</td>
                <td></td>
            </tr>
</tbody>
    </table>
</div></td>
                </tr>
<tr>
<td rowspan="2"><strong>Event ID (Required)</strong></td>
<td>uint8</td>
                <td>1</td>
                <td></td>
            </tr>
<tr>
                    <td colspan="3"><div style="margin-left: 20px; margin-top: 5px; margin-bottom: 5px;">
    <strong>Enum Values:</strong>
    <table border="1" cellpadding="3" cellspacing="0" style="border-collapse: collapse; width: 100%; max-width: 760px; font-size: 12px;">
        <thead>
            <tr style="background-color: #e8e8e8;">
                <th style="width: 40px;">Index</th>
                <th>Value</th>
            </tr>
        </thead>
        <tbody>
            <tr>
            <td style="text-align: center;">0</td>
            <td><code>NONE</code></td>
            </tr>
<tr>
            <td style="text-align: center;">1</td>
            <td><code>JUMP</code></td>
            </tr>
<tr>
            <td style="text-align: center;">2</td>
            <td><code>HURT</code></td>
            </tr>
<tr>
            <td style="text-align: center;">3</td>
            <td><code>DEATH</code></td>
            </tr>
<tr>
            <td style="text-align: center;">4</td>
            <td><code>START_ATTACKING</code></td>
            </tr>
<tr>
            <td style="text-align: center;">5</td>
            <td><code>STOP_ATTACKING</code></td>
            </tr>
<tr>
            <td style="text-align: center;">6</td>
            <td><code>TAMING_FAILED</code></td>
            </tr>
<tr>
            <td style="text-align: center;">7</td>
            <td><code>TAMING_SUCCEEDED</code></td>
            </tr>
<tr>
            <td style="text-align: center;">8</td>
            <td><code>SHAKE_WETNESS</code></td>
            </tr>
<tr>
            <td style="text-align: center;">9</td>
            <td><code>EAT_GRASS</code></td>
            </tr>
<tr>
            <td style="text-align: center;">10</td>
            <td><code>FISHHOOK_BUBBLE</code></td>
            </tr>
<tr>
            <td style="text-align: center;">11</td>
            <td><code>FISHHOOK_FISHPOS</code></td>
            </tr>
<tr>
            <td style="text-align: center;">12</td>
            <td><code>FISHHOOK_HOOKTIME</code></td>
            </tr>
<tr>
            <td style="text-align: center;">13</td>
            <td><code>FISHHOOK_TEASE</code></td>
            </tr>
<tr>
            <td style="text-align: center;">14</td>
            <td><code>SQUID_FLEEING</code></td>
            </tr>
<tr>
            <td style="text-align: center;">15</td>
            <td><code>ZOMBIE_CONVERTING</code></td>
            </tr>
<tr>
            <td style="text-align: center;">16</td>
            <td><code>PLAY_AMBIENT</code></td>
            </tr>
<tr>
            <td style="text-align: center;">17</td>
            <td><code>SPAWN_ALIVE</code></td>
            </tr>
<tr>
            <td style="text-align: center;">18</td>
            <td><code>START_OFFER_FLOWER</code></td>
            </tr>
<tr>
            <td style="text-align: center;">19</td>
            <td><code>STOP_OFFER_FLOWER</code></td>
            </tr>
<tr>
            <td style="text-align: center;">20</td>
            <td><code>LOVE_HEARTS</code></td>
            </tr>
<tr>
            <td style="text-align: center;">21</td>
            <td><code>VILLAGER_ANGRY</code></td>
            </tr>
<tr>
            <td style="text-align: center;">22</td>
            <td><code>VILLAGER_HAPPY</code></td>
            </tr>
<tr>
            <td style="text-align: center;">23</td>
            <td><code>WITCH_HAT_MAGIC</code></td>
            </tr>
<tr>
            <td style="text-align: center;">24</td>
            <td><code>FIREWORKS_EXPLODE</code></td>
            </tr>
<tr>
            <td style="text-align: center;">25</td>
            <td><code>IN_LOVE_HEARTS</code></td>
            </tr>
<tr>
            <td style="text-align: center;">26</td>
            <td><code>SILVERFISH_MERGE_ANIM</code></td>
            </tr>
<tr>
            <td style="text-align: center;">27</td>
            <td><code>GUARDIAN_ATTACK_SOUND</code></td>
            </tr>
<tr>
            <td style="text-align: center;">28</td>
            <td><code>DRINK_POTION</code></td>
            </tr>
<tr>
            <td style="text-align: center;">29</td>
            <td><code>THROW_POTION</code></td>
            </tr>
<tr>
            <td style="text-align: center;">30</td>
            <td><code>PRIME_TNTCART</code></td>
            </tr>
<tr>
            <td style="text-align: center;">31</td>
            <td><code>PRIME_CREEPER</code></td>
            </tr>
<tr>
            <td style="text-align: center;">32</td>
            <td><code>AIR_SUPPLY</code></td>
            </tr>
<tr>
            <td style="text-align: center;">33</td>
            <td><code>DEPRECATED_ADD_PLAYER_LEVELS</code></td>
            </tr>
<tr>
            <td style="text-align: center;">34</td>
            <td><code>GUARDIAN_MINING_FATIGUE</code></td>
            </tr>
<tr>
            <td style="text-align: center;">35</td>
            <td><code>AGENT_SWING_ARM</code></td>
            </tr>
<tr>
            <td style="text-align: center;">36</td>
            <td><code>DRAGON_START_DEATH_ANIM</code></td>
            </tr>
<tr>
            <td style="text-align: center;">37</td>
            <td><code>GROUND_DUST</code></td>
            </tr>
<tr>
            <td style="text-align: center;">38</td>
            <td><code>SHAKE</code></td>
            </tr>
<tr>
            <td style="text-align: center;">39</td>
            <td><code>FEED</code></td>
            </tr>
<tr>
            <td style="text-align: center;">40</td>
            <td><code>BABY_AGE</code></td>
            </tr>
<tr>
            <td style="text-align: center;">41</td>
            <td><code>INSTANT_DEATH</code></td>
            </tr>
<tr>
            <td style="text-align: center;">42</td>
            <td><code>NOTIFY_TRADE</code></td>
            </tr>
<tr>
            <td style="text-align: center;">43</td>
            <td><code>LEASH_DESTROYED</code></td>
            </tr>
<tr>
            <td style="text-align: center;">44</td>
            <td><code>CARAVAN_UPDATED</code></td>
            </tr>
<tr>
            <td style="text-align: center;">45</td>
            <td><code>TALISMAN_ACTIVATE</code></td>
            </tr>
<tr>
            <td style="text-align: center;">46</td>
            <td><code>DEPRECATED_UPDATE_STRUCTURE_FEATURE</code></td>
            </tr>
<tr>
            <td style="text-align: center;">47</td>
            <td><code>PLAYER_SPAWNED_MOB</code></td>
            </tr>
<tr>
            <td style="text-align: center;">48</td>
            <td><code>PUKE</code></td>
            </tr>
<tr>
            <td style="text-align: center;">49</td>
            <td><code>UPDATE_STACK_SIZE</code></td>
            </tr>
<tr>
            <td style="text-align: center;">50</td>
            <td><code>START_SWIMMING</code></td>
            </tr>
<tr>
            <td style="text-align: center;">51</td>
            <td><code>BALLOON_POP</code></td>
            </tr>
<tr>
            <td style="text-align: center;">52</td>
            <td><code>TREASURE_HUNT</code></td>
            </tr>
<tr>
            <td style="text-align: center;">53</td>
            <td><code>SUMMON_AGENT</code></td>
            </tr>
<tr>
            <td style="text-align: center;">54</td>
            <td><code>FINISHED_CHARGING_ITEM</code></td>
            </tr>
<tr>
            <td style="text-align: center;">55</td>
            <td><code>ACTOR_GROW_UP</code></td>
            </tr>
<tr>
            <td style="text-align: center;">56</td>
            <td><code>VIBRATION_DETECTED</code></td>
            </tr>
<tr>
            <td style="text-align: center;">57</td>
            <td><code>DRINK_MILK</code></td>
            </tr>
<tr>
            <td style="text-align: center;">58</td>
            <td><code>SHAKE_WETNESS_STOP</code></td>
            </tr>
<tr>
            <td style="text-align: center;">59</td>
            <td><code>KINETIC_DAMAGE_DEALT</code></td>
            </tr>
        </tbody>
    </table>
</div>
</td>
                </tr>
<tr>
<td><strong>Data (Required)</strong></td>
<td>varint32</td>
                <td>2</td>
                <td></td>
            </tr>
</tbody>
    </table>
</div>
    </div>
</body>
</html>"
`;

exports[`Protocol Schemas > Properly generates HTML pages and index for game protocol packets > protocol/LoginPacket.html 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>LoginPacket (1)</title>
    <style>
        body {
            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
            margin: 0;
            padding: 20px;
            background-color: #f5f5f5;
            line-height: 1.6;
        }
        .container {
            max-width: 1200px;
            margin: 0 auto;
            background-color: white;
            padding: 30px;
            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
        }
        h1 {
            color: #2c3e50;
            border-bottom: 3px solid #3498db;
            padding-bottom: 10px;
            margin-top: 0;
        }
        h2 {
            color: #34495e;
            border-bottom: 2px solid #3498db;
            padding-bottom: 5px;
            margin-top: 30px;
        }
        h3 {
            color: #555;
            margin-top: 20px;
            margin-bottom: 10px;
        }
        h4 {
            color: #666;
            margin-top: 15px;
            margin-bottom: 8px;
        }
        table {
            background-color: white;
            font-size: 14px;
            margin-bottom: 10px;
        }
        th {
            font-weight: bold;
            text-align: left;
            padding: 8px !important;
        }
        td {
            padding: 8px !important;
        }
        tr:nth-child(even) {
            background-color: #f9f9f9;
        }
        tr:hover {
            background-color: #e8f4f8;
        }
        .description {
            color: #555;
            font-style: italic;
            margin: 10px 0 20px 0;
            padding: 10px;
            background-color: #f8f9fa;
            border-left: 4px solid #3498db;
        }
        a {
            color: #3498db;
            text-decoration: none;
        }
        a:hover {
            text-decoration: underline;
        }
        .packet-list {
            columns: 3;
            column-gap: 20px;
        }
        .packet-list li {
            margin-bottom: 8px;
            break-inside: avoid;
            overflow-wrap: anywhere;
        }
        .packet-list a {
            overflow-wrap: anywhere;
        }
        details {
            margin: 10px 0;
        }
        summary {
            cursor: pointer;
            font-weight: bold;
            padding: 8px;
            background-color: #f0f0f0;
            border: 1px solid #ddd;
            border-radius: 4px;
            user-select: none;
        }
        summary:hover {
            background-color: #e8e8e8;
        }
        details[open] summary {
            background-color: #d4edff;
            border-color: #3498db;
            border-left: 4px solid #3498db;
        }
        @media (max-width: 900px) {
            .packet-list {
                columns: 2;
            }
        }
        @media (max-width: 600px) {
            .packet-list {
                columns: 1;
            }
        }
    </style>
</head>
<body>
    <div class="container">
        <p><a href="index.html">← Back to Index</a></p>
        <h1>LoginPacket (1)</h1>
<div class="description">Sent once from client to server at login.</div>
<div style="margin-left: 0px; margin-top: 10px;">
<table border="1" cellpadding="5" cellspacing="0" style="border-collapse: collapse; width: 100%; max-width: 800px;">
        <thead>
            <tr style="background-color: #f0f0f0;">
                <th>Field Name</th>
                <th>Type</th>
                <th>Field Index</th>
                <th>Description</th>
            </tr>
        </thead>
        <tbody>
<tr>
<td><strong>Client Network Version (Required)</strong></td>
<td>uint32</td>
                <td>0</td>
                <td></td>
            </tr>
<tr>
<td><strong>Connection Request (Required)</strong></td>
<td>string</td>
                <td>1</td>
                <td>See <a href="connectionRequest.html#diagram">diagram</a> and <a href="connectionRequest.html">connectionRequest</a>.</td>
            </tr>
</tbody>
    </table>
</div>
    </div>
</body>
</html>"
`;

exports[`Protocol Schemas > Properly generates HTML pages and index for game protocol packets > protocol/NpcDialoguePacket.html 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>NpcDialoguePacket</title>
    <style>
        body {
            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
            margin: 0;
            padding: 20px;
            background-color: #f5f5f5;
            line-height: 1.6;
        }
        .container {
            max-width: 1200px;
            margin: 0 auto;
            background-color: white;
            padding: 30px;
            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
        }
        h1 {
            color: #2c3e50;
            border-bottom: 3px solid #3498db;
            padding-bottom: 10px;
            margin-top: 0;
        }
        h2 {
            color: #34495e;
            border-bottom: 2px solid #3498db;
            padding-bottom: 5px;
            margin-top: 30px;
        }
        h3 {
            color: #555;
            margin-top: 20px;
            margin-bottom: 10px;
        }
        h4 {
            color: #666;
            margin-top: 15px;
            margin-bottom: 8px;
        }
        table {
            background-color: white;
            font-size: 14px;
            margin-bottom: 10px;
        }
        th {
            font-weight: bold;
            text-align: left;
            padding: 8px !important;
        }
        td {
            padding: 8px !important;
        }
        tr:nth-child(even) {
            background-color: #f9f9f9;
        }
        tr:hover {
            background-color: #e8f4f8;
        }
        .description {
            color: #555;
            font-style: italic;
            margin: 10px 0 20px 0;
            padding: 10px;
            background-color: #f8f9fa;
            border-left: 4px solid #3498db;
        }
        a {
            color: #3498db;
            text-decoration: none;
        }
        a:hover {
            text-decoration: underline;
        }
        .packet-list {
            columns: 3;
            column-gap: 20px;
        }
        .packet-list li {
            margin-bottom: 8px;
            break-inside: avoid;
            overflow-wrap: anywhere;
        }
        .packet-list a {
            overflow-wrap: anywhere;
        }
        details {
            margin: 10px 0;
        }
        summary {
            cursor: pointer;
            font-weight: bold;
            padding: 8px;
            background-color: #f0f0f0;
            border: 1px solid #ddd;
            border-radius: 4px;
            user-select: none;
        }
        summary:hover {
            background-color: #e8e8e8;
        }
        details[open] summary {
            background-color: #d4edff;
            border-color: #3498db;
            border-left: 4px solid #3498db;
        }
        @media (max-width: 900px) {
            .packet-list {
                columns: 2;
            }
        }
        @media (max-width: 600px) {
            .packet-list {
                columns: 1;
            }
        }
    </style>
</head>
<body>
    <div class="container">
        <p><a href="index.html">← Back to Index</a></p>
        <h1>NpcDialoguePacket</h1>
<div class="description">Sent from the server to client when remote firing an NPC dialogue window for a client</div>
<div style="margin-left: 0px; margin-top: 10px;">
<table border="1" cellpadding="5" cellspacing="0" style="border-collapse: collapse; width: 100%; max-width: 800px;">
        <thead>
            <tr style="background-color: #f0f0f0;">
                <th>Field Name</th>
                <th>Type</th>
                <th>Field Index</th>
                <th>Description</th>
            </tr>
        </thead>
        <tbody>
<tr>
<td><strong>Npc Id Raw Id (Required)</strong></td>
<td>uint64</td>
                <td>0</td>
                <td>The ActorUniqueID of the NPC being remote fired</td>
            </tr>
<tr>
<td rowspan="2"><strong>Npc Dialogue Action Type (Required)</strong></td>
<td>varint32</td>
                <td>1</td>
                <td></td>
            </tr>
<tr>
                    <td colspan="3"><div style="margin-left: 20px; margin-top: 5px; margin-bottom: 5px;">
    <strong>Enum Values:</strong>
    <table border="1" cellpadding="3" cellspacing="0" style="border-collapse: collapse; width: 100%; max-width: 760px; font-size: 12px;">
        <thead>
            <tr style="background-color: #e8e8e8;">
                <th style="width: 40px;">Index</th>
                <th>Value</th>
            </tr>
        </thead>
        <tbody>
            <tr>
            <td style="text-align: center;">0</td>
            <td><code>Open</code></td>
            </tr>
<tr>
            <td style="text-align: center;">1</td>
            <td><code>Close</code></td>
            </tr>
        </tbody>
    </table>
</div>
</td>
                </tr>
<tr>
<td><strong>Dialogue (Required)</strong></td>
<td>string</td>
                <td>2</td>
                <td>The text to be displayed to the client</td>
            </tr>
<tr>
<td><strong>Scene Name (Required)</strong></td>
<td>string</td>
                <td>3</td>
                <td>The scene the data has been pulled from for the client to reference</td>
            </tr>
<tr>
<td><strong>Npc Name (Required)</strong></td>
<td>string</td>
                <td>4</td>
                <td>The name of the NPC to be displayed to the client</td>
            </tr>
<tr>
<td><strong>Action JSON (Required)</strong></td>
<td>string</td>
                <td>5</td>
                <td>The JSON string of the buttons/actions the server can perform. The server is still authoritative on what actions can be performed</td>
            </tr>
</tbody>
    </table>
</div>
    </div>
</body>
</html>"
`;

exports[`Protocol Schemas > Properly generates HTML pages and index for game protocol packets > protocol/ProtocolMode.html 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>ProtocolMode</title>
    <style>
        body {
            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
            margin: 0;
            padding: 20px;
            background-color: #f5f5f5;
            line-height: 1.6;
        }
        .container {
            max-width: 1200px;
            margin: 0 auto;
            background-color: white;
            padding: 30px;
            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
        }
        h1 {
            color: #2c3e50;
            border-bottom: 3px solid #3498db;
            padding-bottom: 10px;
            margin-top: 0;
        }
        h2 {
            color: #34495e;
            border-bottom: 2px solid #3498db;
            padding-bottom: 5px;
            margin-top: 30px;
        }
        h3 {
            color: #555;
            margin-top: 20px;
            margin-bottom: 10px;
        }
        h4 {
            color: #666;
            margin-top: 15px;
            margin-bottom: 8px;
        }
        table {
            background-color: white;
            font-size: 14px;
            margin-bottom: 10px;
        }
        th {
            font-weight: bold;
            text-align: left;
            padding: 8px !important;
        }
        td {
            padding: 8px !important;
        }
        tr:nth-child(even) {
            background-color: #f9f9f9;
        }
        tr:hover {
            background-color: #e8f4f8;
        }
        .description {
            color: #555;
            font-style: italic;
            margin: 10px 0 20px 0;
            padding: 10px;
            background-color: #f8f9fa;
            border-left: 4px solid #3498db;
        }
        a {
            color: #3498db;
            text-decoration: none;
        }
        a:hover {
            text-decoration: underline;
        }
        .packet-list {
            columns: 3;
            column-gap: 20px;
        }
        .packet-list li {
            margin-bottom: 8px;
            break-inside: avoid;
            overflow-wrap: anywhere;
        }
        .packet-list a {
            overflow-wrap: anywhere;
        }
        details {
            margin: 10px 0;
        }
        summary {
            cursor: pointer;
            font-weight: bold;
            padding: 8px;
            background-color: #f0f0f0;
            border: 1px solid #ddd;
            border-radius: 4px;
            user-select: none;
        }
        summary:hover {
            background-color: #e8e8e8;
        }
        details[open] summary {
            background-color: #d4edff;
            border-color: #3498db;
            border-left: 4px solid #3498db;
        }
        @media (max-width: 900px) {
            .packet-list {
                columns: 2;
            }
        }
        @media (max-width: 600px) {
            .packet-list {
                columns: 1;
            }
        }
    </style>
</head>
<body>
    <div class="container">
        <p><a href="index.html">← Back to Index</a></p>
        <h1>ProtocolMode</h1>
    </div>
</body>
</html>"
`;

exports[`Protocol Schemas > Properly generates HTML pages and index for game protocol packets > protocol/ProtocolObject.html 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>ProtocolObject</title>
    <style>
        body {
            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
            margin: 0;
            padding: 20px;
            background-color: #f5f5f5;
            line-height: 1.6;
        }
        .container {
            max-width: 1200px;
            margin: 0 auto;
            background-color: white;
            padding: 30px;
            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
        }
        h1 {
            color: #2c3e50;
            border-bottom: 3px solid #3498db;
            padding-bottom: 10px;
            margin-top: 0;
        }
        h2 {
            color: #34495e;
            border-bottom: 2px solid #3498db;
            padding-bottom: 5px;
            margin-top: 30px;
        }
        h3 {
            color: #555;
            margin-top: 20px;
            margin-bottom: 10px;
        }
        h4 {
            color: #666;
            margin-top: 15px;
            margin-bottom: 8px;
        }
        table {
            background-color: white;
            font-size: 14px;
            margin-bottom: 10px;
        }
        th {
            font-weight: bold;
            text-align: left;
            padding: 8px !important;
        }
        td {
            padding: 8px !important;
        }
        tr:nth-child(even) {
            background-color: #f9f9f9;
        }
        tr:hover {
            background-color: #e8f4f8;
        }
        .description {
            color: #555;
            font-style: italic;
            margin: 10px 0 20px 0;
            padding: 10px;
            background-color: #f8f9fa;
            border-left: 4px solid #3498db;
        }
        a {
            color: #3498db;
            text-decoration: none;
        }
        a:hover {
            text-decoration: underline;
        }
        .packet-list {
            columns: 3;
            column-gap: 20px;
        }
        .packet-list li {
            margin-bottom: 8px;
            break-inside: avoid;
            overflow-wrap: anywhere;
        }
        .packet-list a {
            overflow-wrap: anywhere;
        }
        details {
            margin: 10px 0;
        }
        summary {
            cursor: pointer;
            font-weight: bold;
            padding: 8px;
            background-color: #f0f0f0;
            border: 1px solid #ddd;
            border-radius: 4px;
            user-select: none;
        }
        summary:hover {
            background-color: #e8e8e8;
        }
        details[open] summary {
            background-color: #d4edff;
            border-color: #3498db;
            border-left: 4px solid #3498db;
        }
        @media (max-width: 900px) {
            .packet-list {
                columns: 2;
            }
        }
        @media (max-width: 600px) {
            .packet-list {
                columns: 1;
            }
        }
    </style>
</head>
<body>
    <div class="container">
        <p><a href="index.html">← Back to Index</a></p>
        <h1>ProtocolObject</h1>
<div style="margin-left: 0px; margin-top: 10px;">
<table border="1" cellpadding="5" cellspacing="0" style="border-collapse: collapse; width: 100%; max-width: 800px;">
        <thead>
            <tr style="background-color: #f0f0f0;">
                <th>Field Name</th>
                <th>Type</th>
                <th>Field Index</th>
                <th>Description</th>
            </tr>
        </thead>
        <tbody>
<tr>
<td><strong>Value</strong></td>
<td>integer</td>
                <td>0</td>
                <td></td>
            </tr>
</tbody>
    </table>
</div>
    </div>
</body>
</html>"
`;

exports[`Protocol Schemas > Properly generates HTML pages and index for game protocol packets > protocol/index.html 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Game Protocol Documentation</title>
    <style>
        body {
            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
            margin: 0;
            padding: 20px;
            background-color: #f5f5f5;
            line-height: 1.6;
        }
        .container {
            max-width: 1200px;
            margin: 0 auto;
            background-color: white;
            padding: 30px;
            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
        }
        h1 {
            color: #2c3e50;
            border-bottom: 3px solid #3498db;
            padding-bottom: 10px;
            margin-top: 0;
        }
        h2 {
            color: #34495e;
            border-bottom: 2px solid #3498db;
            padding-bottom: 5px;
            margin-top: 30px;
        }
        h3 {
            color: #555;
            margin-top: 20px;
            margin-bottom: 10px;
        }
        h4 {
            color: #666;
            margin-top: 15px;
            margin-bottom: 8px;
        }
        table {
            background-color: white;
            font-size: 14px;
            margin-bottom: 10px;
        }
        th {
            font-weight: bold;
            text-align: left;
            padding: 8px !important;
        }
        td {
            padding: 8px !important;
        }
        tr:nth-child(even) {
            background-color: #f9f9f9;
        }
        tr:hover {
            background-color: #e8f4f8;
        }
        .description {
            color: #555;
            font-style: italic;
            margin: 10px 0 20px 0;
            padding: 10px;
            background-color: #f8f9fa;
            border-left: 4px solid #3498db;
        }
        a {
            color: #3498db;
            text-decoration: none;
        }
        a:hover {
            text-decoration: underline;
        }
        .packet-list {
            columns: 3;
            column-gap: 20px;
        }
        .packet-list li {
            margin-bottom: 8px;
            break-inside: avoid;
            overflow-wrap: anywhere;
        }
        .packet-list a {
            overflow-wrap: anywhere;
        }
        details {
            margin: 10px 0;
        }
        summary {
            cursor: pointer;
            font-weight: bold;
            padding: 8px;
            background-color: #f0f0f0;
            border: 1px solid #ddd;
            border-radius: 4px;
            user-select: none;
        }
        summary:hover {
            background-color: #e8e8e8;
        }
        details[open] summary {
            background-color: #d4edff;
            border-color: #3498db;
            border-left: 4px solid #3498db;
        }
        @media (max-width: 900px) {
            .packet-list {
                columns: 2;
            }
        }
        @media (max-width: 600px) {
            .packet-list {
                columns: 1;
            }
        }
    </style>
</head>
<body>
    <div class="container">
        
        <h1>Game Protocol Documentation</h1>
    <p>Documentation for 3 protocol packets and 2 supporting types.</p>
    <h2>Packets</h2>
    <ul class="packet-list">
        <li><a href="ActorEventPacket.html"><strong>ActorEventPacket</strong></a><br><span style="color: #666; font-size: 0.9em;">All kinds of actor state changes (see Actor::handleEntityEvent).</span></li>
<li><a href="NpcDialoguePacket.html"><strong>NpcDialoguePacket</strong></a><br><span style="color: #666; font-size: 0.9em;">Sent from the server to client when remote firing an NPC dialogue window for a client</span></li>
<li><a href="LoginPacket.html"><strong>LoginPacket (1)</strong></a><br><span style="color: #666; font-size: 0.9em;">Sent once from client to server at login.</span></li>
    </ul>
    <h2>Supporting Types</h2>
    <h3>Object Types</h3>
    <ul class="packet-list">
        <li><a href="ProtocolObject.html"><strong>ProtocolObject</strong></a></li>
    </ul>
    <h3>Enums</h3>
    <ul class="packet-list">
        <li><a href="ProtocolMode.html"><strong>ProtocolMode</strong></a></li>
    </ul>
    <h3>Other Types</h3>
    <ul class="packet-list">
        
    </ul>
    </div>
</body>
</html>"
`;
